# FTrie

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Readme.md  build.rs
bench/: .gitignore  MEMORY_COMPARISON.md  PERFORMANCE_COMPARISON.md  README.md  THREE_WAY_COMPARISON.md  bench.py  requirements.txt
docs/: DISTRIBUTED_TRIE_PLAN.md  ES_BENCHMARK_PLAN.md  PERFORMANCE_PLAN.md  PHASE1_MULTI_NODE.md  PHASE2_READ_REPLICAS_HA.md  UNICODE_SUPPORT.md
helloworld-tonic/: Cargo.toml  build.rs
helloworld-tonic/bench/: README.md  bench.py  requirements.txt
helloworld-tonic/docs/: DISTRIBUTED_TRIE_PLAN.md  PERFORMANCE_PLAN.md  PHASE1_MULTI_NODE.md  PHASE2_READ_REPLICAS_HA.md  PHASE3_WRITES_REPLICATION.md
helloworld-tonic/proto/: helloworld.proto  raft.proto
helloworld-tonic/scripts/: run_local_3nodes.sh  run_local_phase2_replicas.sh  run_local_phase3_writes.sh  run_local_phase4_raft.sh  run_local_single_node_static.sh
helloworld-tonic/src/: client.rs  flags.rs  indexer.rs  lb.rs  raft_node.rs  raft_state_machine.rs  server.rs  store.rs  trie.rs  wal.rs
helloworld-tonic/tests/: it_quorums_and_failures.rs  it_raft_basic.rs  it_raft_persistence.rs  it_replication_and_recovery.rs  it_routing.rs  it_top_k.rs
helloworld-tonic/tests/common/: mod.rs
proto/: ftrie.proto
scripts/: bench_generate_trie_x10_perf.sh  bench_scale_memory.sh  bench_scale_perf.sh  generate_scaled_wordlist.py  run_local_3nodes.sh  run_local_es_single_node.sh  run_local_phase2_replicas.sh  run_local_phase4_raft.sh  run_local_single_node_static.sh
src/: client.rs  fst_index.rs  (+9 more)
(+3 files in other folders)
